# bingo-generator

./: .gitignore  Dockerfile  README.md  bingo.example.yaml  pyproject.toml
bingo_generator/: bot.py  cli.py  config.py  generator.py  renderer.py
bingo_generator/styles/: minimal.py
docs/plans/: 2026-05-19-bingo-generator-design.md  2026-05-19-bingo-generator-plan.md
tests/: test_cli.py  test_config.py  test_generator.py  test_renderer.py
