[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bingo-generator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mistralai>=1.0",
    "Pillow>=10.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
bingo-generator = "bingo_generator.cli:main"
